# miner_rs_poolama

./: .gitignore  Cargo.toml
src/: main.rs  miner.cu
