[package]
name = "miner_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arrayref = "0.3.9"
base16 = "0.2.1"
blake3 = "1.8.2"
cudarc =  { version = "0.17.3", features = ["cuda-version-from-build-system"] }
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

